<resources>
    <string name="app_name">Corresponsal</string>
    <string name="correoElectronico">Correo Electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciarsesion">Iniciar Sesion</string>
    <string name="bienvenidoCorresponsal">Bienvenido a Corresponsal</string>
    <string name="nombreCorresponsal">Nombre Corresponsal</string>
    <string name="saldoCorresponsal">Saldo Corresponsal</string>
    <string name="cuentaCorresponsal">Cuenta Corresponsal</string>
    <string name="texto">Texto</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="habilitar">Habilitar</string>
    <string name="deshabilitar">Deshabilitar</string>
    <string name="salir">Salir</string>
    <string name="cuotas">Cuotas</string>
    <string name="consultar_corresponsal">Consultar Corresponsal</string>
    <string name="pagoTarjeta">Pago con Tarjeta</string>
    <string name="numeroTarjeta">Número de Tarjeta</string>
    <string name="cvv">CVV</string>
    <string name="mm">mm</string>
    <string name="aaaa">AAAA</string>
    <string name="nombreCliente">Nombre del Cliente</string>
    <string name="valorPagar">Valor a pagar</string>
    <string name="confirmacion">Confirmación</string>
    <string name="estimado">Estimado:</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="confirmacionLargaTarjeta">Desea realizar el pago a WPOSS por un valor de:</string>
    <string name="confirmacionLargaRetiro">Se realizará un retiro al número de cuenta:</string>
    <string name="valorRetiro">Por un valor de:</string>
    <string name="recordatorioRetiro">Recuerde que esta acción tiene un cargo de 2.000 directamente en su cuenta WPOSS.</string>
    <string name="recordatorioDeposito">Recuerde que por está acción se le descontarán 1.000 directamente de su depósito</string>
    <string name="confirmacioNombreDeposito">Desea realizar el deposito a:</string>
    <string name="fecha">FECHA EXPEDICIÓN</string>
    <string name="consultarcliente">Consultar Cliente</string>
    <string name="saldo">Saldo:</string>
    <string name="aceptar">Aceptar</string>
    <string name="actualizarCorresponsal">Actualizar Corresponsal</string>
    <string name="actualizarDatos">Actualizar Datos</string>
    <string name="actualizarClientes">Actualizar Clientes</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="crearCliente">Crear Cliente</string>
    <string name="ingresePin">Ingrese su Pin</string>
    <string name="ingreseNuevamentePin">Ingrese Nuevamente su Pin</string>
    <string name="consultarCorresponsal">Consultar Corresponsal</string>
</resources>