<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include layout="@layout/bolitas_azules" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="66dp"
        android:text="@string/bienvenidoCorresponsal"
        android:textAlignment="center"
        android:textColor="@color/titulo"
        android:textSize="50sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/textView"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/purple_200" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="135dp"
        android:src="@drawable/ic_circulo_fondo" />

    <EditText
        android:id="@+id/campoEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="142dp"
        android:background="@drawable/txt_login"
        android:ems="10"
        android:hint="@string/correoElectronico"
        android:inputType="textEmailAddress"
        android:padding="7dp" />

    <EditText
        android:id="@+id/campoContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/campoEmail"
        android:layout_marginTop="13dp"
        android:layout_marginHorizontal="70dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:background="@drawable/txt_login"
        android:padding="7dp"/>

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="580dp"
        android:background="@drawable/btn_azul"
        android:text="@string/iniciarsesion"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>