<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/bolitas_azules" />

    <TextView
        android:id="@+id/tituloConfirmacionRetiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="98dp"
        android:text="@string/confirmacion"
        android:textAlignment="center"
        android:textColor="@color/titulo"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/lineaConfirmacionRetiro"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/tituloConfirmacionRetiro"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/bolita_azul" />

    <TextView
        android:id="@+id/texto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloConfirmacionRetiro"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/estimado"
        android:textAlignment="viewStart"
        android:textColor="@color/titulo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nombreConfirmacionRetiro"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texto1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="83dp"
        android:ems="10"
        android:padding="7dp"
        android:textColor="@color/txt_normal" />

    <TextView
        android:id="@+id/texto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloConfirmacionRetiro"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="40dp"
        android:text="@string/confirmacionLargaRetiro"
        android:textAlignment="viewStart"
        android:textColor="@color/titulo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cuentaConfirmacionRetiro"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texto1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="83dp"
        android:ems="10"
        android:padding="7dp"
        android:textColor="@color/txt_normal" />

    <TextView
        android:id="@+id/texto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloConfirmacionRetiro"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="249dp"
        android:text="@string/valorRetiro"
        android:textAlignment="viewStart"
        android:textColor="@color/titulo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pagoRetiroConfirmacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texto3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="1dp"
        android:textAlignment="viewStart"
        android:textColor="@color/txt_normal"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_money" />

    <TextView
        android:id="@+id/texto4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pagoRetiroConfirmacion"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/recordatorioRetiro"
        android:textAlignment="viewStart"
        android:textColor="@color/txt_hint"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btncancelarRetiroConfirmacion"
        android:layout_width="146dp"
        android:layout_height="35dp"
        android:layout_below="@+id/texto4"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_transparente"
        android:text="@string/cancelar"
        android:textAlignment="center"
        android:textColor="@color/bolita_azul"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnconfirmarRetiroConfirmacion"
        android:layout_width="146dp"
        android:layout_height="35dp"
        android:layout_below="@+id/texto4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_azul"
        android:text="@string/confirmar"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>