<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/bolitas_azules" />

    <TextView
        android:id="@+id/tituloConfirmacionTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="98dp"
        android:text="@string/confirmacion"
        android:textAlignment="center"
        android:textColor="@color/titulo"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/lineaConfirmacionTarjeta"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/tituloConfirmacionTarjeta"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/bolita_azul" />

    <TextView
        android:id="@+id/texto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloConfirmacionTarjeta"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/estimado"
        android:textAlignment="viewStart"
        android:textColor="@color/txt_normal"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nombreConfirmacionTarjeta"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texto1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="83dp"
        android:ems="10"
        android:padding="7dp"
        android:textColor="@color/txt_normal" />

    <TextView
        android:id="@+id/texto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloConfirmacionTarjeta"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="40dp"
        android:text="@string/confirmacionLargaTarjeta"
        android:textAlignment="viewStart"
        android:textColor="@color/titulo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pagoConfirmacionTarjeta"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texto1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="83dp"
        android:ems="10"
        android:padding="7dp"
        android:textColor="@color/txt_normal"
        app:drawableLeftCompat="@drawable/ic_money" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloConfirmacionTarjeta"
        android:layout_alignParentStart="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="249dp"
        android:text="@string/cuotas"
        android:textAlignment="viewStart"
        android:textColor="@color/titulo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/numeroCuotasConfirmacion"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloConfirmacionTarjeta"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="-155dp"
        android:layout_toStartOf="@+id/text4"
        android:ems="10"
        android:padding="7dp"
        android:textColor="@color/txt_normal"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/texto4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloConfirmacionTarjeta"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="295dp"
        android:text="@string/numeroTarjeta"
        android:textAlignment="viewStart"
        android:textColor="@color/titulo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/numeroTarjetaConfirmacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texto4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="1dp"
        android:textAlignment="viewStart"
        android:textColor="@color/txt_normal"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nombreTarjetaConfirmacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numeroTarjetaConfirmacion"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="1dp"
        android:textAlignment="viewStart"
        android:textColor="@color/txt_normal"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btncancelarTarjetaConfirmacion"
        android:layout_width="146dp"
        android:layout_height="35dp"
        android:layout_below="@+id/nombreTarjetaConfirmacion"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_transparente"
        android:text="@string/cancelar"
        android:textAlignment="center"
        android:textColor="@color/bolita_azul"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnconfirmarTarjetaConfirmacion"
        android:layout_width="146dp"
        android:layout_height="35dp"
        android:layout_below="@+id/nombreTarjetaConfirmacion"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_azul"
        android:text="@string/confirmar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>